Bug 1720696: Only fetch mMsaa from non-null AccessibleWraps r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D120001